[tool.poetry]
name = "wire-detect"
version = "0.1.0"
description = "Library made to detect wire from LiDAR point cloud dataset"
authors = ["Ettore Hidoux <ettore.hidoux@imt-atlantique.net>"]
maintainers = [
    "Ettore Hidoux <ettore.hidoux@imt-atlantique.net>",
]

license = "MIT"
readme = "README.md"
packages = [{include = "wire_detect"}]

[tool.poetry.dependencies]
python = ">=3.9, <=3.11"
pytest = "^7.4.0"
flake8 = "^6.1.0"
pep8-naming = "^0.13.3"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
spicy = "0.16.0"
fastparquet = "^2023.7.0"
scikit-learn = "1.3.0"
scipy = "^1.11.1"
flake8-docstrings-complete = "^1.2.0"

[tool.poetry.urls]
"Homepage" = "https://github.com/ettoreh/LiDAR-case-study"
"Bug Tracker" = "https://github.com/ettoreh/LiDAR-case-study/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
